[package]
name = "exec"
version = "0.2.1"
edition = "2024"

[dependencies]
lua_parser = { version = "0.10.0", path = "../parser", features = ["diag"] }
lua_semantics = { version = "0.9.0", path = "../semantics", features = [
  "diag",
] }
lua_ir = { version = "0.8.0", path = "../lua_ir" }
codespan-reporting = { version = "0.11" }

[features]
default = []
32bit = ["lua_parser/32bit"]
